...
				app:layout_collapseMode="pin"
				android:id="@id/toolbar"/>
		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>

	<rhedox.gesahuvertretungsplan.ui.widget.FixedViewPager
		android:id="@+id/viewPager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:context="rhedox.gesahuvertretungsplan.ui.activity.WelcomeActivity"/>

	<android.support.design.widget.FloatingActionButton
...
		android:layout_height="wrap_content"
		app:srcCompat="@drawable/ic_forward"
		app:fabSize="normal"
		android:layout_gravity="bottom|right"
		app:layout_anchorGravity="bottom|right|end"
		android:layout_margin="16dp"
		android:id="@+id/fab"
		/>


</android.support.design.widget.CoordinatorLayout>

