...
    <string name="today">heute</string>
    <string name="tomorrow">morgen</string>
    <string name="date_prefix">am</string>
    <string name="next_week">nächsten</string>
    <string name="oops">Uups!</string>

    <string name="announcements">Ankündigungen</string>

    <string name="teacher">Lehrer</string>
    <string name="substitute_teacher">Vertretungslehrer</string>
    <string name="hint">Hinweis</string>
    <string name="room">Raum</string>

...
